new expect syntax instead of old should syntax in spec

--- a/kinit_config.yml
+++ b/kinit_config.yml
@@ -1,14 +1,14 @@
 bestPracticesGems:
+- bullet
 - cane
-- rack-mini-profiler
 - rails_best_practices
 - reek
+- rubocop
 - simplecov
 
 testingGems:
 - factory_girl_rails
 - rspec
-- shoulda
 
 suggestions:
 - CodeClimate
